--- a/src/styles/root-layout.scss
+++ b/src/styles/root-layout.scss
@@ -1,5 +1,6 @@
+@use "../styles/theme.module.scss" as Theme;
+@use "../styles/mixins.scss" as Mixins;
 
-// Layout Sections{
 main {
   min-height: 100vh;
   width: 100vw;
@@ -51,6 +52,10 @@ div[class$="-layout"] {
   }
 }
 
+div.puppy-modal {
+  display: none;
+}
+
 div.white-layout {
   flex: 1 1;
   padding: 100px 0;
@@ -75,5 +80,3 @@ div.tan-layout {
   padding: 100px 0;
   background-color: Theme.$lightPrimary;
 }
-
-// }
