--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -10,6 +10,13 @@ html * {
   box-sizing: border-box; // who knows. It might be a good practice.
 }
 
+main {
+  min-height: 100vh;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+}
+
 // Oreo focus for better accessibility
 :focus-visible {
   outline: 9px double Theme.$secondaryGreen;
