--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -60,12 +60,29 @@ h1.title {
   font-size: 40px;
 }
 
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-left: none;
+ 
+  th {
+    font-weight: 700;
+  }
+  tr {
+    border-bottom: 3px solid Theme.$secondaryGreen;
+  }
+}
+
 hr {
   width: 100%;
+  height: 6px;
+  border-radius: 3px;
+  border: none;
+  background-color: Theme.$secondaryGreen;
 }
 
 b {
-  font-weight: 700;
+  font-weight: 700 !important;
   margin: 0 !important;
 }
 
