--- a/src/styles/modal.module.scss
+++ b/src/styles/modal.module.scss
@@ -1,16 +1,11 @@
-@use "../styles/theme.module.scss" as Theme;
-@use "../styles/mixins.scss" as Mixins;
-@use "../styles/root-layout.module.scss";
+@use "@styles/theme.module.scss" as Theme;
+@use "@styles/mixins.scss" as Mixins;
+@use "@styles/root-layout.module.scss";
 
 $buttonPos: calc(
   Theme.$spaceBetweenElements + (Theme.$spaceBetweenElements / 2)
 );
 $svgWxH: 57px;
-
-@include root-layout.white-layout {
-  @extend root-layout.wood-layout;
-}
-
 .container {
   display: flex;
   width: 100%;
@@ -23,7 +18,9 @@ $svgWxH: 57px;
   z-index: 500;
 }
 
-.backdrop {
+.child {
+  @extend .wood-layout;
+  flex-direction: column;
   margin: Theme.$spaceBetweenElements;
   width: fit-content;
   position: relative;
@@ -91,8 +88,10 @@ button.exit {
 }
 
 @include Mixins.mediaQuery(Theme.$microViewport) {
-  button.exit {
+  button.exit,
+  .child {
     margin: unset;
+    padding: unset;
     left: unset;
   }
 }
