--- a/src/styles/breeder-line.module.scss
+++ b/src/styles/breeder-line.module.scss
@@ -1,10 +1,16 @@
 .text {
+  display: inline-flex;
   height: 1em;
+  margin-top: 0.5em;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  flex-wrap: wrap-reverse;
   .cherry {
     position: relative;
-    width: 1em;
-    height: 1em;
-    top: 0.2em;
+    width: 1em !important;
+    height: 1em !important;
+    margin-left: .6ch;
     border-radius: 100%;
   }
 }
