Fix: Centering of logo.

--- a/src/styles/nav.module.scss
+++ b/src/styles/nav.module.scss
@@ -21,7 +21,7 @@
     color: Theme.$lightTertiaryCherry;
     width: 118px;
     height: 70px;
-    position: relative;
+    position: absolute;
     left: Theme.$spaceBetweenElements;
     top: Theme.$spaceBetweenElements / 2;
     border-radius: 14px;
