--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -38,10 +38,10 @@
   align-items: $align;
 }
 
-@mixin setBoxShadow($color, $scale: 1px) {
-  $x: calc(8px + $scale);
-  $y: calc(11px + $scale);
-  box-shadow: $color $x $y 15px 0px;
+@mixin setBoxShadow($color) {
+  $x: 9px;
+  $y: 12px;
+  box-shadow: $color $x $y 15px;
 }
 
 @mixin scaleOnHover($scale: 1.07){
