Style: Adds Sass variables for smaller button radii.

--- a/src/styles/theme.module.scss
+++ b/src/styles/theme.module.scss
@@ -48,6 +48,8 @@ $watchViewport: 200px;
 $spaceBetweenElements: 30px;
 
 //Etc
+$XsmallButtonRadius: 0.375rem; // 6px
+$smallButtonRadius: 0.5rem; // 8px
 $buttonRadius: 0.875rem; // 14px
 $bigButtonRadius: 2rem; // 32px
 $Headshots_LgRadius: 3.1875rem; // 51px
