--- a/src/styles/root-layout.module.scss
+++ b/src/styles/root-layout.module.scss
@@ -1,5 +1,26 @@
 @use "../styles/theme.module.scss" as Theme;
 @use "../styles/mixins.scss" as Mixins;
+// logo {
+a.home-button {
+  $max-scale: 1.07;
+  height: calc(100% - ($max-scale * 100% - 100%));
+  width: fit-content;
+  margin: 1rem auto;
+  display: block;
+  aspect-ratio: 1/1;
+  border: 4px solid Theme.$primary;
+  border-radius: 100%;
+  background-color: white;
+  transition: all #{Theme.$transitionShort}s;
+  &:hover {
+    scale: $max-scale;
+  }
+  &:active {
+    box-shadow: none;
+    scale: calc($max-scale - 0.1);
+  }
+}
+// }
 
 // All layouts
 @mixin all-layouts() {
@@ -49,7 +70,6 @@
   @include all-layouts;
   flex: 1 1;
   padding: 100px 0;
-  margin-top: 100px;
   background-color: white;
 }
 
