--- a/src/styles/root-layout.module.scss
+++ b/src/styles/root-layout.module.scss
@@ -66,17 +66,19 @@ a.home-button {
   }
 }
 
+$spaceBetweenLayouts: 100px;
+
 .white-layout {
   @include all-layouts;
   flex: 1 1;
-  padding: 100px 0;
+  padding: Theme.$spaceBetweenElements 0 $spaceBetweenLayouts 0;
   background-color: white;
 }
 
 .wood-layout {
   @include all-layouts;
   flex: 2 2;
-  padding: 100px 0;
+  padding: $spaceBetweenLayouts 0;
   background-color: Theme.$darkPrimary;
   background-position: center;
   background-size: cover;
@@ -88,6 +90,6 @@ a.home-button {
 .tan-layout {
   @include all-layouts;
   flex: 1 1;
-  padding: 100px 0;
+  padding: $spaceBetweenLayouts 0;
   background-color: Theme.$lightPrimary;
 }
