Style: Makes dog-tree layout uniform inspite of datestrings.

--- a/src/styles/dog-tree.module.scss
+++ b/src/styles/dog-tree.module.scss
@@ -4,6 +4,8 @@
 div.top {
   display: flex;
   margin: Theme.$spaceBetweenElements 0;
+  justify-content: space-between;
+  width: 100%;
 }
 h1.heading {
   margin: calc(Theme.$spaceBetweenElements + Theme.$outlineWidth);
