--- a/src/styles/theme.module.scss
+++ b/src/styles/theme.module.scss
@@ -28,8 +28,10 @@ $boxShadowBlur: 15; // Needs to be populated in the mixin.
 $outlineWidth: 9px;
 $momOutline: $outlineWidth solid $lightMom;
 $dadOutline: $outlineWidth solid $lightDad;
+$unrecordedDogOutline: $outlineWidth solid $lightSecondaryGreen;
 $momShadow: 0 0 0 calc($outlineWidth * 0.667) $lightTertiaryCherry;
 $dadShadow: 0 0 0 calc($outlineWidth * 0.667) $lightAccentBlue;
+$unrecordedDogShadow: 0 0 0 calc($outlineWidth * 0.667) $lightSecondaryGreen;
 
 $black: #333;
 
