Style: Center dog-tree top elements on phones.

--- a/src/styles/dog-tree.module.scss
+++ b/src/styles/dog-tree.module.scss
@@ -49,6 +49,7 @@ div.bottom {
   }
   div.top {
     flex-direction: column;
+    align-items: center;
   }
   img.puppyGroup {
     width: 100% !important;
