Feat: Adds availability icon and accessibility features to currentLitter.

--- a/src/styles/availability-icon.module.scss
+++ b/src/styles/availability-icon.module.scss
@@ -1,6 +1,6 @@
 .availability {
   position: relative;
-  height: 1em !important;
+  height: 1em;
   width: 1em;
   align-items: center;
   justify-content: center;
