Refactor: Adds in forgotten alias paths for stylesheets.

--- a/src/styles/adoption-banner.module.scss
+++ b/src/styles/adoption-banner.module.scss
@@ -1,5 +1,5 @@
-@use "../styles/theme.module.scss" as Theme;
-@use "../styles/mixins.scss" as Mixins;
+@use "@styles/theme.module.scss" as Theme;
+@use "@styles/mixins.scss" as Mixins;
 
 .adoptionBanner {
   a {
